--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
+# Core Flask framework
 Flask==2.3.3
+Werkzeug==2.3.7
+
+# QR Code generation
 qrcode==7.4.2
 Pillow==10.0.1
-Werkzeug==2.3.7
+
+# Additional utilities
+click==8.1.7
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
