Updated requirements and optimized functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Werkzeug==2.3.7
 
 # QR Code generation
 qrcode==7.4.2
-Pillow==10.0.1
+Pillow>=10.3.0,<11.0.0
 
 # Additional utilities
 click==8.1.7
