--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@
 Flask==2.3.3
 Werkzeug==2.3.7
 
+# Database
+psycopg2-binary==2.9.7
+
 # QR Code generation
 qrcode==7.4.2
 Pillow>=10.3.0,<11.0.0
@@ -11,3 +14,4 @@ click==8.1.7
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+python-dotenv==1.0.0
